Fix caption on Safari

--- a/source/stylesheets/_lightbox.scss
+++ b/source/stylesheets/_lightbox.scss
@@ -19,7 +19,7 @@
   background-size: contain;
   background-position: center center;
   background-repeat: no-repeat;
-  height: 100%;
+  flex-grow: 1;
   width: 100%;
 }
 
